<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/luckiest"
        android:gravity="center"
        android:text="@string/math_mania"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textColorHighlight="@color/purple"
        android:textIsSelectable="false"
        android:textSize="52sp" />

    <LinearLayout
        android:layout_width="563dp"
        android:layout_height="703dp"
        android:layout_marginTop="-130dp"
        android:background="@drawable/menu"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="230dp"
            android:layout_height="80dp"
            android:layout_marginTop="195dp"
            android:background="@drawable/button"
            android:fontFamily="@font/luckiest"
            android:gravity="center_horizontal|center_vertical"
            android:includeFontPadding="true"
            android:padding="4dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:shadowColor="@color/purple"
            android:shadowRadius="20"
            android:text="@string/addition"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:backgroundTint="@color/cardview_light_background"
            app:backgroundTintMode="multiply"
            app:cornerRadius="90dp" />

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="230dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/luckiest"
            android:gravity="center_horizontal|center_vertical"
            android:includeFontPadding="true"
            android:padding="4dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:shadowColor="@color/purple"
            android:shadowRadius="20"
            android:text="@string/subtraction"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/background_light"
            app:backgroundTintMode="multiply"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/buttonMulti"
            android:layout_width="230dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/luckiest"
            android:gravity="center_horizontal|center_vertical"
            android:includeFontPadding="true"
            android:padding="4dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:shadowColor="@color/purple"
            android:shadowRadius="20"
            android:text="@string/multiplication"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:backgroundTint="@color/cardview_light_background"
            app:backgroundTintMode="multiply"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="230dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/luckiest"
            android:gravity="center_horizontal|center_vertical"
            android:includeFontPadding="true"
            android:padding="4dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:shadowColor="@color/purple"
            android:shadowRadius="20"
            android:text="@string/division"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:backgroundTint="@color/cardview_light_background"
            app:backgroundTintMode="multiply"
            app:cornerRadius="30dp" />

    </LinearLayout>

</LinearLayout>